# Haskell-ANSI-IRC

./: ircbase.cabal
app/: Main.hs
src/: Lib.hs  NetHandleUI.hs  Parsers.hs
