name:                ircbase
version:             0.1.0.0
synopsis:            internet relay chat server in Haskell for use with netcat
description:         Please see README.md
homepage:            https://github.com/colin1006/Haskell-ANSI-IRC
license:             BSD3
author:              Colin Clemmons
maintainer:          example@example.com
copyright:           Colin Clemmons
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , NetHandleUI
                     , Parsers
  build-depends:       base >= 4.7 && < 5
                     , network
                     , containers
                     , bytestring
                     , stm
                     , time
                     , ansi-terminal
                     , bytestring-read
                     , attoparsec
  default-language:    Haskell2010

executable ircbase-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbase
                     , network
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/colin1006/Haskell-ANSI-IRC
